[workspace]
members=["packages/onft/*"]
exclude= ["contracts"]

[workspace.package]
authors = ["5iddy <siddhuyeturi@gmail.com>"]
description = "Cosmwasm/Rust Bindings for OmniFlixHub"
edition = "2021"
version= "0.1.0"

[workspace.dependencies]
serde = "1.0.145"
schemars = "0.8.11"
cosmwasm-std = "1.1.3"
cosmwasm-schema = "1.1.3"